# qgis_altitude_ign

./: AGENTS.md  README.md  pyproject.toml  ruff.toml
.prompts/: __plan.md
.prompts/A_tasks/: A.A_Round_the_number.md  A.B_Show_pink_point_where_the_click_occured.md  A_Initialization.md
altitude_ign/: __init__.py  altitude_dock.py  altitude_ign.py  altitude_ign_tool.py  elevation_request.py  metadata.txt
tests/: test_elevation_request.py
